# hauser

./: .gitignore  README.md
Nvs/: meson.build  meson_options.txt
Nvs/src/client/: main.cpp
Nvs/src/server/: main.cpp
Pos/: automaton.toml  automaton2.toml  error.toml  meson.build  meson_options.txt  test.toml
Pos/doku/: dba.tex
Pos/include/: Logger.h  PD_Automaton.h
Pos/src/: Logger.cpp  PD_Automaton.cpp  main.cpp
Pos/test/: test.cpp
