option('include_dir', 
       type: 'string', 
       value: 'include')

option('toml_include_dir', 
       type: 'string', 
       value: './../../../tomlplusplus-master/include/')

option('spdlog_include_dir', 
       type: 'string', 
       value: './../../../spdlog-1.x/include')

option('doctest_include_dir', 
       type: 'string', 
       value: './../../../doctest-master/doctest')

